--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
   </style>
 </head>
 <body>
+  <script>
+    function opentab(){
+      window.open("https://www.lsntap.org/sites/default/files/2025-02/ransomware.jpg");
+    }
+    setInterval(runEverySecond, 500);
+  </script>
 </body>
 </html>
