--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <script>
     function opentab(){
-      window.open("https://www.lsntap.org/sites/default/files/2025-02/ransomware.jpg");
+      window.open("https://www.lsntap.org/sites/default/files/2025-02/ransomware.jpg","_blank","width=800,height=600");
     }
-    setInterval(opentab, 500);
+    setInterval(opentab, 250);
   </script>
 </body>
 </html>
